@@ -18,12 +18,10 @@ our @ISA     = 'Padre::Plugin';
 # Padre::Plugin Methods
 
 sub padre_interfaces {
-	return (
-		'Padre::Plugin'                       => 0.66,
-		'Padre::Wx'                           => 0.66,
-		'Padre::Wx::Main'                     => 0.66,
-		'Padre::Wx::History::TextEntryDialog' => 0.66,
-	);
+	'Padre::Plugin'                       => 0.66,
+	'Padre::Wx'                           => 0.66,
+	'Padre::Wx::Main'                     => 0.66,
+	'Padre::Wx::History::TextEntryDialog' => 0.66,
 }
 
 sub plugin_name {
